build: set up stylelint and lint SCSS files

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,6 @@
 {
-	"extends": ["stylelint-config-recommended"],
-
+    "extends": "stylelint-config-standard-scss",
 	"rules": {
-		"font-family-no-missing-generic-family-keyword": null,
-		"no-descending-specificity": null
+		"indentation": 4
 	}
 }
