--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-{}
+{
+  "devDependencies": {
+    "sass": "^1.51.0",
+    "stylelint": "^14.8.2",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0"
+  }
+}
