--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -185,6 +185,7 @@
                 "font-stretch",
                 "font-size",
                 "font-family",
+                "font-display",
                 "src",
                 "line-height",
                 "letter-spacing",
